# Sentence-Embeddings-Android

./: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  download_models.bat  download_models.sh  settings.gradle.kts
.cargo/: config.toml
.github/workflows/: build.yml  maven_central_publish.yml
app/: .gitignore  build.gradle.kts
app-model2vec/: build.gradle.kts
app-model2vec/src/androidTest/java/com/projects/shubham0204/demo_model2vec/: ExampleInstrumentedTest.kt
app-model2vec/src/main/: AndroidManifest.xml
app-model2vec/src/main/java/com/projects/shubham0204/demo_model2vec/: MainActivity.kt
app-model2vec/src/main/res/values/: strings.xml  themes.xml
app-model2vec/src/test/java/com/projects/shubham0204/demo_model2vec/: ExampleUnitTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/all-minilm-l6-v2/: model.onnx
app/src/main/assets/snowflake-arctic-embed-s/: model.onnx
app/src/main/java/com/ml/shubham0204/sentence_embeddings/: MainActivity.kt
app/src/main/java/com/projects/shubham0204/demo/: Config.kt  MainActivity.kt
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
model2vec/: build.gradle.kts
model2vec/src/androidTest/java/com/ml/shubham0204/model2vec/: Model2VecTest.kt
model2vec/src/main/java/com/ml/shubham0204/model2vec/: Model2Vec.kt
rs-hf-tokenizer/: Cargo.toml
rs-model2vec/: Cargo.toml  tokenizer.json
rs-model2vec/.cargo/: config.toml
rs-model2vec/src/: lib.rs  static_model.rs
sentence_embeddings/: build.gradle.kts
src/: lib.rs
(+14 files in other folders)
